# SberRiskHack_2026

./: .env  .env.example  .gitignore  README.md  TEAM_TASKS.md  pyproject.toml  run.py  switch_dataset.py
src/: graph.py  state.py
src/agents/: data_analyst.py  evaluator_writer.py  feature_coder.py  feature_engineer.py  feature_evaluator.py  feature_ideator.py  output_writer.py
src/utils/: check_submission.py  fallback_features.py  operations.py  scoring.py
